<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/share"
        android:icon="@android:drawable/ic_menu_share"
        android:id="@+id/menu_share" />
    <item
        android:title="@string/call_touden"
        android:icon="@android:drawable/ic_menu_call"
        android:id="@+id/menu_call_touden" />
    <item
        android:title="@string/cm_on_off"
        android:icon="@android:drawable/ic_menu_view"
        android:id="@+id/menu_cm_on_off" />
    <item
        android:title="@string/support_app"
        android:icon="@android:drawable/ic_menu_help"
        android:id="@+id/menu_support_app" />
    <item
        android:title="@string/preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:id="@+id/menu_preferences" />
    <item
        android:title="@string/about_app"
        android:icon="@android:drawable/ic_menu_info_details"
        android:id="@+id/menu_about_app" />
    <item
        android:title="@string/finish"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:id="@+id/menu_finish" />
</menu>
