<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/category_group"
        >
        <ListPreference
            android:title="@string/title_default_group"
            android:key="default_group"
            android:dialogTitle="@string/title_default_group"
            android:entryValues="@array/default_group_values"
            android:entries="@array/default_groups"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/category_alarm">
        <ListPreference
            android:title="@string/title_default_alarm_time"
            android:key="default_alarm_time"
            android:dialogTitle="@string/title_default_alarm_time"
            android:entryValues="@array/default_alarm_time_values"
            android:entries="@array/default_alarm_time"
            />
    </PreferenceCategory>
</PreferenceScreen>
