<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <AutoCompleteTextView
            android:id="@+id/address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_edit_address"
            android:singleLine="true"
            android:completionThreshold="1"
            android:completionHint="@string/completion_hint_edit_address"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decision"
            android:onClick="search"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref"
            style="@style/SuggestPref"
            />
        <TextView
            android:id="@+id/pref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SuggestPref"
            />
    </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_suggest_address"
        style="@style/SuggestAddress"
        />
</LinearLayout>
