<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_address"
        style="@style/HeadLineStyle"
    />
    <TextView
        android:id="@+id/currentAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/address_loading"
        style="@style/Text"
    />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_group"
        style="@style/HeadLineStyle"
    />
    <TextView
        android:id="@+id/groupNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Text"
    />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/teiden_span"
        style="@style/HeadLineStyle"
    />
    <TextView
        android:id="@+id/teidenSpan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/address_loading"
        style="@style/Text"
    />
</LinearLayout>
